--- a/GenerateCommentAboutAuthor/GenerateCommentAboutAuthor.csproj
+++ b/GenerateCommentAboutAuthor/GenerateCommentAboutAuthor.csproj
@@ -55,7 +55,8 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="MessageHelper.cs" />
+    <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
